--- a/Runtime/Presentations/HRYooba.Kinect.Presentations.asmdef
+++ b/Runtime/Presentations/HRYooba.Kinect.Presentations.asmdef
@@ -1,13 +1,11 @@
 {
-    "name": "HRYoobaLibrary.Kinect.Rfilkov",
+    "name": "HRYooba.Kinect.Presentations",
     "rootNamespace": "",
     "references": [
-        "GUID:ead9a344095ef7b4db909c929c47b4cf",
+        "GUID:4840d095db1db884ebed2291678c1a43",
         "GUID:0021969b03a844645ad5544ec80c67ec",
-        "GUID:7b172bd445b496c4684a73ee39f3ac70",
-        "GUID:91b8dbf94ce597a489fb16724b7f04e5",
-        "GUID:cc25f5869d1d97247b02b07c9c84bfb6",
-        "GUID:9c2df990b46524a48b578cdacf9d4bbb",
+        "GUID:2bafac87e7f4b9b418d9448d219b01ab",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:77221876cc6b8244180b96e320b1bcd4"
     ],
     "includePlatforms": [],
