--- a/Runtime/Services/HRYooba.Kinect.Services.asmdef
+++ b/Runtime/Services/HRYooba.Kinect.Services.asmdef
@@ -1,7 +1,8 @@
 {
-    "name": "HRYoobaLibrary.Kinect",
+    "name": "HRYooba.Kinect.Services",
     "rootNamespace": "",
     "references": [
+        "GUID:4840d095db1db884ebed2291678c1a43",
         "GUID:0021969b03a844645ad5544ec80c67ec"
     ],
     "includePlatforms": [],
@@ -9,7 +10,7 @@
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": true,
+    "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
